# rapidrouge

./: .gitignore  NOTICE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: release.yml
rapidrouge/: __init__.py  _pure.py  lcs.py  rouge_scorer.py  scoring.py  tokenize.py  tokenizers.py
